--- a/index.html
+++ b/index.html
@@ -2,22 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/kpro-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KPro Remote Manager - SSH File Management Tool</title>
-    <meta name="description" content="Modern SSH remote file management and development tool with integrated editor, terminal, and custom task automation" />
-    <meta name="author" content="KPro" />
-    <meta name="keywords" content="SSH, remote management, file manager, code editor, terminal, automation" />
-
-    <meta property="og:title" content="KPro Remote Manager" />
-    <meta property="og:description" content="Professional SSH file management and development tool" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <title>KPro - SSH Remote Manager</title>
+    <meta name="description" content="Modern SSH file management and development tool" />
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
